updates row modifier to fix side spacing issue and updates row docs

--- a/components/layout/styles/_row.scss
+++ b/components/layout/styles/_row.scss
@@ -14,6 +14,8 @@
     @include base;
 
     &--remove-margin-bottom {
+        @include base;
+
         margin-bottom: 0;
     }
 
